# imc-trading-project

./: .gitignore  MIGRATION_PLAN.md  Makefile  README.md  pyproject.toml  requirements.txt
archive/: backtester_refined_notebook.ipynb  cell_04_backtester.py  cell_09_process_data.py  cell_12_fair_values.py  cell_20_param_grid.py  cell_21_run_backtests.py  cell_28_analyze_logs.py
datasets/tutorial/: prices_round_0_day_-1.csv
examples/: pepper_submission.json  sample_trader.py  trader_official_example.py
examples/day_csv/: sample_trades.csv
notebooks/: README.md
scripts/: analyze_logs.py  example_commands.sh  run_legacy_backtest.py  smoke_run.py  smoke_run_exchange.py  sweep_params.py
src/imc_local_lab/: __init__.py  backtester.py  batch.py  cli.py  datamodel.py  dataset.py  loaders.py  resolver.py  trader_loader.py
src/imc_local_lab/pepper/: __init__.py  gridsearch.py  models.py  policy.py  runner.py
src/imc_trading/: __init__.py  config.py
src/imc_trading/analysis/: log_analysis.py  param_search.py
src/imc_trading/backtesting/: accounting.py  exchange_backtester.py  legacy_backtester.py  matching.py  order_manager.py  queue_tracker.py
src/imc_trading/io/: log_parser.py
src/imc_trading/strategy/: trader.py
tests/: test_accounting.py  test_backtester.py  test_backtester_smoke.py  test_batch.py  test_datamodel.py  test_datamodel_interface.py  test_exchange_backtester.py  test_layout.py  test_loaders.py  test_matching.py  test_order_manager.py  test_pepper.py  test_resolver.py
tests/fixtures/: sample_observations.csv  sample_submission.json
