[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imc-prosperity-merged"
version = "0.2.0"
description = "Merged local IMC Prosperity backtester with round/day CLI, submission replay, and Pepper experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonpickle>=3.0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
imc-prosperity = "imc_local_lab.cli:main"
imc-local = "imc_local_lab.cli:main"
prosperity4btest-local = "imc_local_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
